--- a/git_shortcuts.ipynb
+++ b/git_shortcuts.ipynb
@@ -39,14 +39,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Commit Process"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "git add hello_world.ipynb\n",
+    "git commit -m \"This update\"\n",
+    "git push origin master"
+   ]
   }
  ],
  "metadata": {
