--- a/git_shortcuts.ipynb
+++ b/git_shortcuts.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Git shortcuts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#git shortcuts\n",
     "# $ pwd: Prints the path of the current directory to the screen\n",
     "# $ ls: Lists out the contents of the current folder\n",
@@ -47,8 +54,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# adding one file\n",
     "git add hello_world.ipynb\n",
-    "git commit -m \"This update\"\n",
+    "\n",
+    "# adding all files\n",
+    "git add --all\n",
+    "\n",
+    "# to commit new files/changes\n",
+    "git commit -m \"Version 3/17/2022\"\n",
+    "\n",
+    "# to push to github\n",
     "git push origin master"
    ]
   }
